--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
    <link href="css/styles.css" rel="stylesheet" type="text/css">
-   <script src="js/jquery-1.12.0.js"></script>
+   <script src="js/jquery-3.2.1.js"></script>
    <script src="js/scripts.js"></script>
    <meta charset="utf-8">
    <title>Mad Libs</title>
@@ -41,11 +41,14 @@
           </div>
           <br>
           <button type="submit" class="btn">Show me the story!</button>
+          <button type="reset" class="btn">Reset</button>
         </form>
       </div>
       <div id="story">
         <h1>A weird adventure</h1>
-        <p>One day, <span class="person1"></span> and <span class="person2"></span> were walking through the woods, when suddenly a giant <span class="animal"></span> appeared. "<span class="exclamation"></span>", <span class="person1"></span> cried. The two of them <span class="verb"></span> as quickly possible, and when they were safe, <span class="person1"></span> and <span class="person2"></span> gave each other a giant <span class="noun"></span>.</p>
+        <p>One day, <span class="person1"></span> and <span class="person2"></span> were walking through the woods, when suddenly a giant <span class="animal"></span> appeared. "<span class="exclamation"></span>", <span class="person1"></span> cried. The two of them <span class="verb"></span> as quickly possible, and when they were safe, <span class="person1"></span> and
+        <span class="person2"></span> gave each other a giant <span class="noun"></span>.
+        </p>
       </div>
     </div>
   </body>
