Add 'DRY' code, condensing the code but keeping functionality in js.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Fill in the blanks to write your own story :D</h1>
       </div>
       <div>
-        <form id="formOne">
+        <form id="blanksForm">
           <div class="form-group">
             <label for="person1">Write down a name</label>
             <input type="text" id="person1" class="form-control">
